--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -16,6 +16,10 @@
   color: #696969;
 }
 
+table.dataTable {
+  border-collapse: collapse !important;
+}
+
 .image-container{
   width: 150px;
   height: 150px;
