--- a/templates/dashboard/sidebar-admin.html.twig
+++ b/templates/dashboard/sidebar-admin.html.twig
@@ -6,7 +6,7 @@
     <div class="sidebar-inner">
         <ul class="navigation">
             <li class="active"><a href="{{ path('dashboard') }}"> <i class="la la-home"></i> Dashboard</a></li>
-            <li><a href="{{ path('user_index') }}"><i class="la la-user-tie"></i>Utilisateurs</a></li>
+            <li><a href="{{ path('user_index') }}"><i class="la la-user-alt"></i>Utilisateurs</a></li>
             <li><a href="{{ path('dictionnaire_index') }}"><i class="la la-paper-plane"></i>Dictionnaire</a></li>
             <li><a href="{{ path('annonce_index') }}"><i class="la la-briefcase"></i> Offres d'emploi </a></li>
             <li><a href="dashboard-applicants.html"><i class="la la-file-invoice"></i> Candidatures</a></li>
@@ -16,7 +16,6 @@
             <li><a href="{{ path('faq_index') }}"><i class="la la-question"></i>FAQ</a></li>
             <li><a href="{{ path('stand_index') }}"><i class="la la-bell"></i>Stands</a></li>
             <li><a href="{{ path('pavillon_index') }}"><i class="la la-lock"></i>Pavillons</a></li>
-            <li><a href=""><i class="la la-user-alt"></i>View Profile</a></li>
             <li><a href="{{ path('app_logout') }}"><i class="la la-sign-out"></i>Logout</a></li>
         </ul>
     </div>
