--- a/templates/pagination/twitter_bootstrap_v4_pagination.html.twig
+++ b/templates/pagination/twitter_bootstrap_v4_pagination.html.twig
@@ -10,10 +10,10 @@
  */
 #}
 {% if pageCount > 1 %}
-    <nav>
+    <nav class="ls-pagination">
         {% set classAlign = (align is not defined) ? '' : align=='center' ? ' justify-content-center' : (align=='right' ? ' justify-content-end' : '') %}
         {% set classSize = (size is not defined) ? '' : size=='large' ? ' pagination-lg' : (size=='small' ? ' pagination-sm' : '') %}
-        <ul class="pagination{{ classAlign }}{{ classSize }}">
+        <ul class="{{ classAlign }}{{ classSize }}">
 
             {% if previous is defined %}
                 <li class="page-item">
