--- a/templates/search/filtrer_profile.html.twig
+++ b/templates/search/filtrer_profile.html.twig
@@ -19,9 +19,16 @@
             </ul>
         </div>
 
+        <div class="checkbox-outer">
+            <h4>Type de diplôme</h4>
+            <ul class="checkboxes square">
+                {{ form_row(form.typeDiplome) }}
+            </ul>
+        </div>
+
         <!-- Form Group -->
         <div class="form-group col-lg-2 col-md-12 col-sm-12 text-right">
-            <button type="submit" class="theme-btn btn-style-one">Trouver</button>
+            <button type="submit" class="theme-btn btn-style-one small">Trouver</button>
         </div>
     </div>
 </div>
