--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -17,7 +17,7 @@
 
                         <div class="widget-content">
                             <div class="table-outer">
-                                <table class="default-table" >
+                                <table class="default-table" id="datatable">
                                     <thead>
                                         <tr>
                                             <th>Civilite</th>
