--- a/assets/styles/template/style.scss
+++ b/assets/styles/template/style.scss
@@ -1113,7 +1113,7 @@ default table
 
 .table-outer{
     overflow-y: hidden;
-    overflow-x: auto;
+    overflow-x: hidden;
 }
 
 .default-table{
@@ -2597,7 +2597,7 @@ section hr {
 
 .chosen-container-multi .chosen-choices,
 .chosen-container.chosen-with-drop .chosen-drop{
-    background: #F0F5F7 !important;
+    background: #F0F5F7;
     min-height: 60px;
     line-height: 60px;
     border: 0 !important;
@@ -4516,7 +4516,7 @@ Banner Section
     line-height: 30px;
     font-size: 24px;
     color: #5c6770;
-    background: #ffffff;
+    background-color: rgba(255, 255, 255, 0);
     z-index: 9;
 }
 
