--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -60,226 +60,46 @@
                 </div>
             </div>
 
-            <div class="row">
-
-
-                <div class="col-xl-7 col-lg-12">
-                    <!-- Graph widget -->
-                    <div class="graph-widget ls-widget">
-                        <div class="tabs-box">
-                            <div class="widget-title">
-                                <h4>Your Profile Views</h4>
-                                <div class="chosen-outer">
-                                    <!--Tabs Box-->
-                                    <select class="chosen-select">
-                                        <option>Last 6 Months</option>
-                                        <option>Last 12 Months</option>
-                                        <option>Last 16 Months</option>
-                                        <option>Last 24 Months</option>
-                                        <option>Last 5 year</option>
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="widget-content">
-                                <canvas id="chart" width="100" height="45"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-xl-5 col-lg-12">
-                    <!-- Notification Widget -->
-                    <div class="notification-widget ls-widget">
-                        <div class="widget-title"><h4>Notifications</h4></div>
-                        <div class="widget-content">
-                            <ul class="notification-list">
-                                <li><span class="icon flaticon-briefcase"></span> <strong>Wade Warren</strong> applied for a job <span class="colored">Web Developer</span></li>
-                                <li><span class="icon flaticon-briefcase"></span> <strong>Henry Wilson</strong> applied for a job <span class="colored">Senior Product Designer</span></li>
-                                <li class="success"><span class="icon flaticon-briefcase"></span> <strong>Raul Costa</strong> applied for a job <span class="colored">Product Manager, Risk</span></li>
-                                <li><span class="icon flaticon-briefcase"></span> <strong>Jack Milk</strong> applied for a job <span class="colored">Technical Architect</span></li>
-                                <li class="success"><span class="icon flaticon-briefcase"></span> <strong>Michel Arian</strong> applied for a job <span class="colored">Software Engineer</span></li>
-                                <li><span class="icon flaticon-briefcase"></span> <strong>Ali Tufan</strong> applied for a job <span class="colored">UI Designer</span></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="col-lg-12">
-                    <!-- applicants Widget -->
-                    <div class="applicants-widget ls-widget">
-                        <div class="widget-title"><h4>Recent Applicants</h4></div>
-                        <div class="widget-content">
-                            <div class="row">
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-1.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Darlene Robertson</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-2.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Wade Warren</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-3.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Leslie Alexander</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-1.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Darlene Robertson</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-2.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Wade Warren</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <!-- Candidate block three -->
-                                <div class="candidate-block-three col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <figure class="image"><img src="images/resource/candidate-3.png" alt=""></figure>
-                                            <h4 class="name"><a href="#">Leslie Alexander</a></h4>
-                                            <ul class="candidate-info">
-                                                <li class="designation">UI Designer</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-money"></span> $99 / hour</li>
-                                            </ul>
-                                            <ul class="post-tags">
-                                                <li><a href="#">App</a></li>
-                                                <li><a href="#">Design</a></li>
-                                                <li><a href="#">Digital</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="option-box">
-                                            <ul class="option-list">
-                                                <li><button data-text="View Aplication"><span class="la la-eye"></span></button></li>
-                                                <li><button data-text="Approve Aplication"><span class="la la-check"></span></button></li>
-                                                <li><button data-text="Reject Aplication"><span class="la la-times-circle"></span></button></li>
-                                                <li><button data-text="Supprimer"><span class="la la-trash"></span></button></li>
-                                            </ul>
-                                        </div>
+            <div class="col-lg-12">
+                <!-- applicants Widget -->
+                <div class="applicants-widget ls-widget">
+                    <div class="widget-title"><h4>Offres susceptibles de vous intéresser</h4></div>
+                    <div class="widget-content">
+                        <div class="row">
+                            {% for annonce in annonces %}
+                            <div class="job-block col-lg-6 col-md-12 col-sm-12">
+                                <div class="inner-box">
+                                    <div class="content">
+                                        <span class="company-logo"><img src="images/resource/company-logo/1-1.png" alt=""></span>
+                                        <h4><a href="#">{{ annonce.nom|capitalize }}</a></h4>
+                                        <ul class="job-info">
+                                            <li><span class="icon flaticon-briefcase"></span> Segment</li>
+                                            <li><span class="icon flaticon-map-locator"></span> London, UK</li>
+                                            <li><span class="icon flaticon-clock-3"></span> Publie: {{ annonce.createdAt|date('d-m-Y') }}</li>
+                                            {% if annonce.salaire %}<li><span class="icon flaticon-money"></span> {{ annonce.salaire }}</li>{% endif %}
+                                        </ul>
+                                        <ul class="job-other-info">
+                                            {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
+                                            {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
+                                            {% if annonce.contrat %}<li class="required">{{ annonce.contrat }}</li>{% endif %}
+                                        </ul>
+                                        {% if is_granted('ROLE_CANDIDAT') %}
+                                            {% set isFavorite = false %}
+                                            {% for favoris in annonce.favoris %}
+                                                {% if favoris.id == app.user.id %}
+                                                    {% set isFavorite = true %}
+                                                {% endif %}
+                                            {% endfor %}
+                                            {% if isFavorite %}
+                                                <a href="{{ path('annonce_retrait_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="fas fa-heart"></i></a>
+                                            {% else %}
+                                                <a href="{{ path('annonce_ajout_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="far fa-heart"></i></a>
+                                            {% endif %}
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
+                            {% endfor %}
                         </div>
                     </div>
                 </div>
