--- a/templates/faq/edit.html.twig
+++ b/templates/faq/edit.html.twig
@@ -1,13 +1,32 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-dashboard.html.twig' %}
 
 {% block title %}Edit FAQ{% endblock %}
 
 {% block body %}
-    <h1>Edit FAQ</h1>
+    <section class="user-dashboard">
+        <div class="dashboard-outer">
+            <div class="row">
+                <div class="col-lg-12">
+                    <!-- Ls widget -->
+                    <div class="ls-widget">
+                        <div class="tabs-box">
+                            <div class="widget-title d-flex flex-row">
+                                <h4>F.A.Q| {{ faq.question }}</h4>
+                                <div class="option-box">
+                                    <ul class="option-list">
+                                        <li><a href="{{ path('dictionnaire_index') }}" data-text="Revenir en arrière"><span class="la la-fast-backward"></span></a></li>
+                                        <li>{{ include('faq/_delete_form.html.twig') }}</li>
+                                    </ul>
+                                </div>
+                            </div>
 
-    {{ include('faq/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('faq_index') }}">back to list</a>
-
-    {{ include('faq/_delete_form.html.twig') }}
+                            <div class="widget-content">
+                                {{ include('faq/_form.html.twig', {'button_label': 'Update'}) }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
