--- a/templates/home/annonces.html.twig
+++ b/templates/home/annonces.html.twig
@@ -18,7 +18,7 @@
     <!--End Page Title-->
 
     <!-- Listing Section -->
-    <section class="ls-section">
+    <section class="ls-section js-filter">
         <div class="auto-container">
             <div class="filters-backdrop"></div>
 
@@ -26,182 +26,7 @@
 
                 <!-- Filters Column -->
                 <div class="filters-column col-lg-4 col-md-12 col-sm-12">
-                    <div class="inner-column">
-                        <div class="filters-outer">
-                            <button type="button" class="theme-btn close-filters">X</button>
-
-                            <!-- Filter Block -->
-                            <div class="filter-block">
-                                <h4>Search by Keywords</h4>
-                                <div class="form-group">
-                                    <input type="text" name="listing-search" placeholder="Job title, keywords, or company">
-                                    <span class="icon flaticon-search-3"></span>
-                                </div>
-                            </div>
-
-                            <!-- Filter Block -->
-                            <div class="filter-block">
-                                <h4>Location</h4>
-                                <div class="form-group">
-                                    <input type="text" name="listing-search" placeholder="City or postcode">
-                                    <span class="icon flaticon-map-locator"></span>
-                                </div>
-                                <p>Radius around selected destination</p>
-                                <div class="range-slider-one">
-                                    <div class="area-range-slider"></div>
-                                    <div class="input-outer">
-                                        <div class="amount-outer"><span class="area-amount"></span>km</div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Filter Block -->
-                            <div class="filter-block">
-                                <h4>Category</h4>
-                                <div class="form-group">
-                                    <select class="chosen-select">
-                                        <option>Choose a category</option>
-                                        <option>Residential</option>
-                                        <option>Commercial</option>
-                                        <option>Industrial</option>
-                                        <option>Apartments</option>
-                                    </select>
-                                    <span class="icon flaticon-briefcase"></span>
-                                </div>
-                            </div>
-
-                            <!-- Switchbox Outer -->
-                            <div class="switchbox-outer">
-                                <h4>Job type</h4>
-                                <ul class="switchbox">
-                                    <li>
-                                        <label class="switch">
-                                            <input type="checkbox" checked>
-                                            <span class="slider round"></span>
-                                            <span class="title">Freelance</span>
-                                        </label>
-                                    </li>
-                                    <li>
-                                        <label class="switch">
-                                            <input type="checkbox">
-                                            <span class="slider round"></span>
-                                            <span class="title">Full Time</span>
-                                        </label>
-                                    </li>
-                                    <li>
-                                        <label class="switch">
-                                            <input type="checkbox">
-                                            <span class="slider round"></span>
-                                            <span class="title">Internship</span>
-                                        </label>
-                                    </li>
-                                    <li>
-                                        <label class="switch">
-                                            <input type="checkbox">
-                                            <span class="slider round"></span>
-                                            <span class="title">Part Time</span>
-                                        </label>
-                                    </li>
-                                    <li>
-                                        <label class="switch">
-                                            <input type="checkbox">
-                                            <span class="slider round"></span>
-                                            <span class="title">Temporary</span>
-                                        </label>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <!-- Checkboxes Ouer -->
-                            <div class="checkbox-outer">
-                                <h4>Date Posted</h4>
-                                <ul class="checkboxes">
-                                    <li>
-                                        <input id="check-f" type="checkbox" name="check">
-                                        <label for="check-f">All</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-g" type="checkbox" name="check">
-                                        <label for="check-g">Last Hour</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-h" type="checkbox" name="check">
-                                        <label for="check-h">Last 24 Hours</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-i" type="checkbox" name="check">
-                                        <label for="check-i">Last 7 Days</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-j" type="checkbox" name="check">
-                                        <label for="check-j">Last 14 Days</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-k" type="checkbox" name="check">
-                                        <label for="check-k">Last 30 Days</label>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <!-- Checkboxes Ouer -->
-                            <div class="checkbox-outer">
-                                <h4>Experience Level</h4>
-                                <ul class="checkboxes">
-                                    <li>
-                                        <input id="check-a" type="checkbox" name="check">
-                                        <label for="check-a">All</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-b" type="checkbox" name="check">
-                                        <label for="check-b">Internship</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-c" type="checkbox" name="check">
-                                        <label for="check-c">Entry level</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-d" type="checkbox" name="check">
-                                        <label for="check-d">Associate</label>
-                                    </li>
-                                    <li>
-                                        <input id="check-e" type="checkbox" name="check">
-                                        <label for="check-e">Mid-Senior level4</label>
-                                    </li>
-                                    <li>
-                                        <button class="view-more"><span class="icon flaticon-plus"></span> View More</button>
-                                    </li>
-                                </ul>
-                            </div>
-
-                            <!-- Filter Block -->
-                            <div class="filter-block">
-                                <h4>Salary</h4>
-
-                                <div class="range-slider-one salary-range">
-                                    <div class="salary-range-slider"></div>
-                                    <div class="input-outer">
-                                        <div class="amount-outer">
-                                            <span class="amount salary-amount">
-                                                $<span class="min">0</span>
-                                                $<span class="max">0</span>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Filter Block -->
-                            <div class="filter-block">
-                                <h4>Tags</h4>
-                                <ul class="tags-style-one">
-                                    {% for tag in tags %}
-                                        <li><a href="#">{{ tag.nom }}</a></li>
-                                    {% endfor %}
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
+                    {% include 'search/filtrer_annonce.html.twig' with {form: form} only %}
                 </div>
 
                 <!-- Content Column -->
@@ -235,54 +60,13 @@
                             </div>
                         </div>
 
-
-                        <div class="row">
-                            {% for annonce in annonces %}
-                            <!-- Job Block -->
-                                <div class="job-block col-lg-6 col-md-12 col-sm-12">
-                                    <div class="inner-box">
-                                        <div class="content">
-                                            <span class="company-logo">
-                                                {% for logo in annonce.stand.logo %}
-                                                    <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
-                                                        {% else %}
-                                                    <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
-                                                {% endfor %}
-                                            </span>
-                                            <h4><a href="{{ path('annonce_page', {'slug' : annonce.slug}) }}">{{ annonce.nom|capitalize|slice(0, 20) }}</a></h4>
-                                            <ul class="job-info">
-                                                <li><span class="icon flaticon-briefcase"></span> Segment</li>
-                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                                <li><span class="icon flaticon-clock-3"></span> 11 hours ago</li>
-                                                <li><span class="icon flaticon-money"></span> $35k - $45k</li>
-                                            </ul>
-                                            <ul class="job-other-info">
-                                                {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
-                                                {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
-                                                {% if annonce.contrat %}<li class="required">{{ annonce.contrat }}</li>{% endif %}
-                                            </ul>
-                                            {% if is_granted('ROLE_CANDIDAT') %}
-                                                {% set isFavorite = false %}
-                                                {% for favoris in annonce.favoris %}
-                                                    {% if favoris.id == app.user.id %}
-                                                        {% set isFavorite = true %}
-                                                    {% endif %}
-                                                {% endfor %}
-                                                {% if isFavorite %}
-                                                    <a href="{{ path('annonce_retrait_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="fas fa-heart"></i></a>
-                                                {% else %}
-                                                    <a href="{{ path('annonce_ajout_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="far fa-heart"></i></a>
-                                                {% endif %}
-                                            {% endif %}
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
+                        <div class="row js-filter-content">
+                            {% include 'annonce/_annonces.html.twig' with {annonces: annonces} only %}
                         </div>
 
-
                         <!-- Pagination -->
-                        <nav class="ls-pagination">
+                        <nav class="ls-pagination js-filter-pagination">
+                            {% include 'annonce/_pagination.html.twig' %}
                             <ul>
                                 <li class="prev"><a href="#"><i class="fa fa-arrow-left"></i></a></li>
                                 <li><a href="#">1</a></li>
