--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -32,7 +32,7 @@
         </figure>
         <div class="auto-container">
             <h4>Course Description</h4>
-            <p>{{ blog.description }}</p>
+            <p>{{ blog.description|raw }}</p>
 
             <!-- Other Options -->
             <div class="other-options">
