--- a/templates/stand/_form.html.twig
+++ b/templates/stand/_form.html.twig
@@ -12,6 +12,7 @@
         <div class="col-md-3">{{ form_row(form.speedMeeting) }}</div>
         <div class="col-md-3">{{ form_row(form.nombreParticipationCanditatStand) }}</div>
         <div class="col-md-3">{{ form_row(form.codeInscription) }}</div>
+        {{ form_row(form.documents) }}
     </div>
     <div class="row">
         <div class="col-md-6">{{ form_row(form.description) }}</div>
