--- a/assets/styles/template/chosen.scss
+++ b/assets/styles/template/chosen.scss
@@ -240,10 +240,10 @@
     position: relative;
     display: block;
     overflow: hidden;
-    padding: 0 0 0 40px;
+    padding: 0 0 0 20px;
     height: auto;
     border: 1px solid #dbdbdb;
-    background-color: #fff;
+    background-color: #F0F5F7;
     text-decoration: none;
     white-space: nowrap;
     line-height: 33px;
@@ -274,7 +274,7 @@
     height: 49px;
     outline: 0;
     border: 0!important;
-    background: white !important;
+    background: rgba(255, 255, 255, 0) !important;
     color: #888;
     line-height: normal;
     font-weight: 500;
