--- a/templates/cvexperience/show.html.twig
+++ b/templates/cvexperience/show.html.twig
@@ -25,7 +25,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ cv_experience.description }}</td>
+                <td>{{ cv_experience.description|raw }}</td>
             </tr>
         </tbody>
     </table>
