--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -20,8 +20,8 @@
                             <i class="icon flaticon-briefcase"></i>
                         </div>
                         <div class="right">
-                            <h4>22</h4>
-                            <p>Posted Jobs</p>
+                            <h4>{{ annonces|length }}</h4>
+                            <p>Offres d'emploi</p>
                         </div>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                         </div>
                         <div class="right">
                             <h4>9382</h4>
-                            <p>Application</p>
+                            <p>Candidatures</p>
                         </div>
                     </div>
                 </div>
@@ -60,49 +60,96 @@
                 </div>
             </div>
 
-            <div class="col-lg-12">
-                <!-- applicants Widget -->
-                <div class="applicants-widget ls-widget">
-                    <div class="widget-title"><h4>Offres susceptibles de vous intéresser</h4></div>
-                    <div class="widget-content">
-                        <div class="row">
-                            {% for annonce in annonces %}
-                            <div class="job-block col-lg-6 col-md-12 col-sm-12">
-                                <div class="inner-box">
-                                    <div class="content">
-                                        <span class="company-logo"><img src="images/resource/company-logo/1-1.png" alt=""></span>
-                                        <h4><a href="#">{{ annonce.nom|capitalize }}</a></h4>
-                                        <ul class="job-info">
-                                            <li><span class="icon flaticon-briefcase"></span> Segment</li>
-                                            <li><span class="icon flaticon-map-locator"></span> London, UK</li>
-                                            <li><span class="icon flaticon-clock-3"></span> Publie: {{ annonce.createdAt|date('d-m-Y') }}</li>
-                                            {% if annonce.salaire %}<li><span class="icon flaticon-money"></span> {{ annonce.salaire }}</li>{% endif %}
-                                        </ul>
-                                        <ul class="job-other-info">
-                                            {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
-                                            {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
-                                            {% if annonce.contrat %}<li class="required">{{ annonce.contrat }}</li>{% endif %}
-                                        </ul>
-                                        {% if is_granted('ROLE_CANDIDAT') %}
-                                            {% set isFavorite = false %}
-                                            {% for favoris in annonce.favoris %}
-                                                {% if favoris.id == app.user.id %}
-                                                    {% set isFavorite = true %}
+            <div class="row">
+                {% if user.isCandidat() %}
+                <div class="col-lg-12">
+                    <!-- applicants Widget -->
+                    <div class="applicants-widget ls-widget">
+                        <div class="widget-title"><h4>Offres susceptibles de vous intéresser</h4></div>
+                        <div class="widget-content">
+                            <div class="row">
+                                {% for annonce in annonces %}
+                                <div class="job-block col-lg-6 col-md-12 col-sm-12">
+                                    <div class="inner-box">
+                                        <div class="content">
+                                            <span class="company-logo"><img src="images/resource/company-logo/1-1.png" alt=""></span>
+                                            <h4><a href="#">{{ annonce.nom|capitalize }}</a></h4>
+                                            <ul class="job-info">
+                                                <li><span class="icon flaticon-briefcase"></span> Segment</li>
+                                                <li><span class="icon flaticon-map-locator"></span> London, UK</li>
+                                                <li><span class="icon flaticon-clock-3"></span> Publie: {{ annonce.createdAt|date('d-m-Y') }}</li>
+                                                {% if annonce.salaire %}<li><span class="icon flaticon-money"></span> {{ annonce.salaire }}</li>{% endif %}
+                                            </ul>
+                                            <ul class="job-other-info">
+                                                {% if annonce.horaires %}<li class="time">{{ annonce.horaires }}</li>{% endif %}
+                                                {% if annonce.accessibilite %}<li class="privacy">{{ annonce.accessibilite ? 'CMR' : 'Non CMR' }}</li>{% endif %}
+                                                {% if annonce.contrat %}<li class="required">{{ annonce.contrat }}</li>{% endif %}
+                                            </ul>
+                                            {% if is_granted('ROLE_CANDIDAT') %}
+                                                {% set isFavorite = false %}
+                                                {% for favoris in annonce.favoris %}
+                                                    {% if favoris.id == app.user.id %}
+                                                        {% set isFavorite = true %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                                {% if isFavorite %}
+                                                    <a href="{{ path('annonce_retrait_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="fas fa-heart"></i></a>
+                                                {% else %}
+                                                    <a href="{{ path('annonce_ajout_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="far fa-heart"></i></a>
                                                 {% endif %}
-                                            {% endfor %}
-                                            {% if isFavorite %}
-                                                <a href="{{ path('annonce_retrait_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="fas fa-heart"></i></a>
-                                            {% else %}
-                                                <a href="{{ path('annonce_ajout_favoris', {id: annonce.id}) }}" class="bookmark-btn"><i class="far fa-heart"></i></a>
                                             {% endif %}
-                                        {% endif %}
+                                        </div>
                                     </div>
                                 </div>
+                                {% endfor %}
                             </div>
-                            {% endfor %}
                         </div>
                     </div>
                 </div>
+                {% endif %}
+                {% if is_granted('ROLE_RECRUTEUR') %}
+                <div class="col-xl-7 col-lg-12">
+                    <!-- Graph widget -->
+                    <div class="graph-widget ls-widget">
+                        <div class="tabs-box">
+                            <div class="widget-title">
+                                <h4>Your Profile Views</h4>
+                                {#<div class="chosen-outer">
+                                    <!--Tabs Box-->
+                                    <select class="chosen-select">
+                                        <option>Last 6 Months</option>
+                                        <option>Last 12 Months</option>
+                                        <option>Last 16 Months</option>
+                                        <option>Last 24 Months</option>
+                                        <option>Last 5 year</option>
+                                    </select>
+                                </div>#}
+                            </div>
+
+                            <div class="widget-content">
+                                <canvas id="chart" width="100" height="45"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-xl-5 col-lg-12">
+                    <!-- Notification Widget -->
+                    <div class="notification-widget ls-widget">
+                        <div class="widget-title"><h4>Notifications</h4></div>
+                        <div class="widget-content">
+                            <ul class="notification-list">
+                                <li><span class="icon flaticon-briefcase"></span> <strong>Wade Warren</strong> applied for a job <span class="colored">Web Developer</span></li>
+                                <li><span class="icon flaticon-briefcase"></span> <strong>Henry Wilson</strong> applied for a job <span class="colored">Senior Product Designer</span></li>
+                                <li class="success"><span class="icon flaticon-briefcase"></span> <strong>Raul Costa</strong> applied for a job <span class="colored">Product Manager, Risk</span></li>
+                                <li><span class="icon flaticon-briefcase"></span> <strong>Jack Milk</strong> applied for a job <span class="colored">Technical Architect</span></li>
+                                <li class="success"><span class="icon flaticon-briefcase"></span> <strong>Michel Arian</strong> applied for a job <span class="colored">Software Engineer</span></li>
+                                <li><span class="icon flaticon-briefcase"></span> <strong>Ali Tufan</strong> applied for a job <span class="colored">UI Designer</span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                {% endif %}
             </div>
         </div>
     </section>
