--- a/templates/faq/show.html.twig
+++ b/templates/faq/show.html.twig
@@ -1,30 +1,52 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-dashboard.html.twig' %}
 
 {% block title %}FAQ{% endblock %}
 
 {% block body %}
-    <h1>FAQ</h1>
+    <section class="user-dashboard">
+        <div class="dashboard-outer">
+            <div class="row">
+                <div class="col-lg-12">
+                    <!-- Ls widget -->
+                    <div class="ls-widget">
+                        <div class="tabs-box">
+                            <div class="widget-title d-flex flex-row">
+                                <h4>F.A.Q | {{ faq.question }}</h4>
+                                <div class="option-box">
+                                    <ul class="option-list">
+                                        <li><a href="{{ path('faq_index') }}" data-text="Revenir en arrière"><span class="la la-fast-backward"></span></a></li>
+                                        <li><a href="{{ path('faq_edit', {'id': faq.id}) }}" data-text="Editer"><span class="la la-pen"></span></a></li>
+                                        <li>{{ include('faq/_delete_form.html.twig') }}</li>
+                                    </ul>
+                                </div>
+                            </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ faq.id }}</td>
-            </tr>
-            <tr>
-                <th>Question</th>
-                <td>{{ faq.question }}</td>
-            </tr>
-            <tr>
-                <th>Reponse</th>
-                <td>{{ faq.reponse }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('faq_index') }}">back to list</a>
-
-    <a href="{{ path('faq_edit', {'id': faq.id}) }}">edit</a>
-
-    {{ include('faq/_delete_form.html.twig') }}
+                            <div class="widget-content">
+                                <div class="table-outer">
+                                    <table class="default-table">
+                                        <tbody>
+                                        <tr>
+                                            <th>Question</th>
+                                            <td>{{ faq.question }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Crée le</th>
+                                            <td>{{ faq.createdAt ? faq.createdAt|date('Y-m-d à H:i:s') : '' }}</td>
+                                        </tr>
+                                        {% if faq.updatedAt %}
+                                            <tr>
+                                                <th>UpdatedAt</th>
+                                                <td>{{ faq.updatedAt ? faq.updatedAt|date('Y-m-d à H:i:s') : '' }}</td>
+                                            </tr>
+                                        {% endif %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock %}
