--- a/templates/forum/index.html.twig
+++ b/templates/forum/index.html.twig
@@ -33,7 +33,7 @@
                                                 {% endif %}
                                                 <img src="{{ asset('images/resource/network.png') }}" alt="">
                                             </figure>
-                                            <h4 class="name"><a href="#">{{ forum.nom }}</a></h4>
+                                            <h4 class="name"><a href="{{ path('forum_page', {'slug': forum.slug}) }}">{{ forum.nom }}</a></h4>
                                             <ul class="candidate-info">
                                                 <li class="designation">De</li>
                                                 <li><span class="icon flaticon-time"></span>{{ forum.dateOuverture ? forum.dateOuverture|date('d-m-Y') : '' }}</li>
