--- a/templates/home/stand_page.html.twig
+++ b/templates/home/stand_page.html.twig
@@ -16,7 +16,7 @@
                                 {% if stand.logo %}
                                     {% for logo in stand.logo %}
                                         <img src="{{ asset('uploads/' ~ logo.nom) }}" alt="{{ logo.nom }}" style="width: 100px">
-                                                        {% else %}
+                                    {% else %}
                                         <img src="{{ asset('uploads/stand.png') }}" alt="" style="width: 100px">
                                     {% endfor %}
                                 {% endif %}
@@ -37,22 +37,17 @@
                     <div class="content-column col-lg-8 col-md-12 col-sm-12 order-2">
                         <div class="job-detail">
                             <h4>A propos de l'entreprise</h4>
-                            <p>{{ stand.description }}</p>
+                            <p>{{ stand.description|raw }}</p>
+                            {% if stand.documents %}
                             <h4>Documents à consulter</h4>
                             <div class="row images-outer">
-                                <div class="col-lg-3 col-md-3 col-sm-6">
-                                    <figure class="image"><a href="{{ asset('images/resource/employers-single-1.png') }}" class="lightbox-image" data-fancybox="gallery"><img src="{{ asset('images/resource/employers-single-1.png') }}" alt=""></a></figure>
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-6">
-                                    <figure class="image"><a href="{{ asset('images/resource/employers-single-2.png') }}" class="lightbox-image" data-fancybox="gallery"><img src="{{ asset('images/resource/employers-single-2.png') }}" alt=""></a></figure>
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-6">
-                                    <figure class="image"><a href="{{ asset('images/resource/employers-single-3.png') }}" class="lightbox-image" data-fancybox="gallery"><img src="{{ asset('images/resource/employers-single-3.png') }}" alt=""></a></figure>
-                                </div>
-                                <div class="col-lg-3 col-md-3 col-sm-6">
-                                    <figure class="image"><a href="{{ asset('images/resource/employers-single-4.png') }}" class="lightbox-image" data-fancybox="gallery"><img src="{{ asset('images/resource/employers-single-4.png') }}" alt=""></a></figure>
-                                </div>
+                                    {% for doc in stand.documents %}
+                                        <div class="col-lg-3 col-md-3 col-sm-6">
+                                            <figure class="image"><a href="{{ asset('uploads/' ~ doc.nom) }}" class="lightbox-image" data-fancybox="gallery"><img src="{{ asset('uploads/' ~ doc.nom) }}" alt=""></a></figure>
+                                        </div>
+                                    {% endfor %}
                             </div>
+                            {% endif %}
                         </div>
 
                         {% if stand.annonces|length > 1 %}
@@ -66,7 +61,9 @@
                             <div class="job-block">
                                 <div class="inner-box">
                                     <div class="content">
-                                        <span class="company-logo"><img src="images/resource/company-logo/1-3.png" alt=""></span>
+                                        <span class="company-logo">
+                                            <img src="{{ asset('images/resource/company-logo/1-3.png') }}" alt="">
+                                        </span>
                                         <h4><a href="{{ path('annonce_page', {'slug': annonce.slug}) }}">{{ annonce.nom|capitalize }}</a></h4>
                                         <ul class="job-info">
                                             {% if annonce.secteur %}<li><span class="icon flaticon-briefcase"></span> {{ annonce.secteur|join }}</li>{% endif %}
