--- a/templates/pavillon/_form.html.twig
+++ b/templates/pavillon/_form.html.twig
@@ -1,4 +1,4 @@
 {{ form_start(form, { 'attr': {'class': 'default-form'} }) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="theme-btn btn-style-one small">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
