--- a/templates/realisation/show.html.twig
+++ b/templates/realisation/show.html.twig
@@ -13,7 +13,7 @@
             </tr>
             <tr>
                 <th>Description</th>
-                <td>{{ realisation.description }}</td>
+                <td>{{ realisation.description|raw }}</td>
             </tr>
         </tbody>
     </table>
