--- a/templates/tag/show.html.twig
+++ b/templates/tag/show.html.twig
@@ -3,36 +3,50 @@
 {% block title %}Tag{% endblock %}
 
 {% block body %}
-    <h1>Tag</h1>
+<section class="user-dashboard">
+    <div class="dashboard-outer">
+        <div class="row">
+            <div class="col-lg-12">
+                <!-- Ls widget -->
+                <div class="ls-widget">
+                    <div class="tabs-box">
+                        <div class="widget-title d-flex flex-row">
+                            <h4>Tag | {{ tag.nom }}</h4>
+                            <div class="option-box">
+                                <ul class="option-list">
+                                    <li><a href="{{ path('tag_index') }}" data-text="Revenir en arrière"><span class="la la-fast-backward"></span></a></li>
+                                    <li><a href="{{ path('tag_edit', {'id': tag.id}) }}" data-text="Editer"><span class="la la-pen"></span></a></li>
+                                    <li>{{ include('tag/_delete_form.html.twig') }}</li>
+                                </ul>
+                            </div>
+                        </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Nom</th>
-                <td>{{ tag.nom }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ tag.slug }}</td>
-            </tr>
-            <tr>
-                <th>Id</th>
-                <td>{{ tag.id }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ tag.createdAt ? tag.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-            <tr>
-                <th>UpdatedAt</th>
-                <td>{{ tag.updatedAt ? tag.updatedAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('tag_index') }}">back to list</a>
-
-    <a href="{{ path('tag_edit', {'id': tag.id}) }}">edit</a>
-
-    {{ include('tag/_delete_form.html.twig') }}
+                        <div class="widget-content">
+                            <div class="table-outer">
+                                <table class="default-table">
+                                    <tbody>
+                                        <tr>
+                                            <th>Nom</th>
+                                            <td>{{ tag.nom }}</td>
+                                        </tr>
+                                        <tr>
+                                            <th>Crée le</th>
+                                            <td>{{ tag.createdAt ? tag.createdAt|date('Y-m-d à H:i:s') : '' }}</td>
+                                        </tr>
+                                        {% if tag.updatedAt %}
+                                            <tr>
+                                                <th>UpdatedAt</th>
+                                                <td>{{ tag.updatedAt ? tag.updatedAt|date('Y-m-d à H:i:s') : '' }}</td>
+                                            </tr>
+                                        {% endif %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </section>
 {% endblock %}
